# config/packages/nelmio_api_doc.yaml
@@ -1,9 +1,54 @@
 nelmio_api_doc:
     documentation:
         info:
-            title: Ecogreen API
-            description: Find advices for your garden
-            version: 1.0.0
+            title: Books
+            description: Une API d'OpenClassrooms avec des livres, des autrices et des auteurs !
+            version: 2.0.0
+        paths:
+            /api/v1/login:
+                post:
+                    operationId: postCredentialsItem
+                    tags:
+                        - Auth
+                    summary: Permet d'obtenir le token JWT pour se logger.
+                    requestBody:
+                        description: Crée un nouveau token JWT
+                        content:
+                            application/json:
+                                schema:
+                                    $ref: '#/components/schemas/Credentials'
+                    responses:
+                        '200':
+                            description: Récupère le token JWT
+                            content:
+                                application/json:
+                                    schema:
+                                        $ref: '#/components/schemas/Token'
+        components:
+            schemas:
+                Token:
+                    type: object
+                    properties:
+                        token:
+                            type: string
+                            readOnly: true
+                Credentials:
+                    type: object
+                    properties:
+                        username:
+                            type: string
+                            default: admin@bookapi.com
+                        password:
+                            type: string
+                            default: password
+            securitySchemes:
+                bearerAuth:
+                    type: apiKey
+                    description: 'Value: Bearer {jwt}'
+                    name: Authorization
+                    in: header
+            security:
+                - bearerAuth: []
     areas: # to filter documented areas
         path_patterns:
-            - ^/api/v1(?!/doc$) # Accepts routes under /api/v1 except /api/v1/doc
+            - ^/api(?!/doc$) # Accepts routes under /api except /api/doc
