# src/Controller/UserController.php
@@ -13,10 +13,16 @@ use Symfony\Component\HttpKernel\Exception\HttpException;
 use Symfony\Component\PasswordHasher\Hasher\UserPasswordHasherInterface;
 use Symfony\Component\Serializer\SerializerInterface;
 use Symfony\Component\HttpFoundation\JsonResponse;
+use Symfony\Component\Security\Http\Attribute\IsGranted;
+
+
+use OpenApi\Attributes as OA;
+use Nelmio\ApiDocBundle\Annotation\Model;
 
 /**
  * @Route("/api/v1")
  */
+#[Route('/api/v1')]
 final class UserController extends AbstractController
 {
     public function __construct(
@@ -31,6 +37,18 @@ final class UserController extends AbstractController
      * @return Response The user data
      * 
      */
+    #[OA\Get(
+        path: "/api/v1/users",
+        summary: "Get all users",
+        tags: ["User"],
+        responses: [
+            new OA\Response(
+                response: 200,
+                description: "Returns the list of users",
+                content: new OA\JsonContent(type: "array", items: new OA\Items(ref: new Model(type: User::class, groups: ["user:read"])))
+            )
+        ]
+    )]
     #[Route('/users', name: 'api_user', methods: ['GET'])]
     public function index(EntityManagerInterface $entityManager): Response
     {
@@ -50,6 +68,30 @@ final class UserController extends AbstractController
      * @return Response The user data
      * 
      */
+    #[OA\Get(
+        path: "/api/v1/users/{id}",
+        summary: "Get a user by ID",
+        tags: ["User"],
+        parameters: [
+            new OA\Parameter(
+                name: "id",
+                in: "path",
+                required: true,
+                schema: new OA\Schema(type: "integer")
+            )
+        ],
+        responses: [
+            new OA\Response(
+                response: 200,
+                description: "Returns the user",
+                content: new OA\JsonContent(ref: new Model(type: User::class, groups: ["user:read"]))
+            ),
+            new OA\Response(
+                response: 404,
+                description: "User not found"
+            )
+        ]
+    )]
     #[Route('/users/{id}', name: 'api_user_get', methods: ['GET'])]
     public function get(EntityManagerInterface $entityManager, int $id): Response
     {
@@ -74,7 +116,41 @@ final class UserController extends AbstractController
      * @return JsonResponse The user data
      * 
      */
+    #[OA\Put(
+        path: "/api/v1/users/{id}",
+        summary: "Update a user by ID",
+        tags: ["User"],
+        parameters: [
+            new OA\Parameter(
+                name: "id",
+                in: "path",
+                required: true,
+                schema: new OA\Schema(type: "integer")
+            )
+        ],
+        requestBody: new OA\RequestBody(
+            content: new OA\JsonContent(
+                type: "object",
+                properties: [
+                    new OA\Property(property: "username", type: "string"),
+                    new OA\Property(property: "postal_code", type: "string")
+                ]
+            )
+        ),
+        responses: [
+            new OA\Response(
+                response: 200,
+                description: "Returns the updated user",
+                content: new OA\JsonContent(ref: new Model(type: User::class, groups: ["user:read"]))
+            ),
+            new OA\Response(
+                response: 404,
+                description: "User not found"
+            )
+        ]
+    )]
     #[Route('/users/{id}', name: 'api_user_update', methods: ['PUT', 'PATCH'])]
+    #[IsGranted('ROLE_USER')]
     public function update(EntityManagerInterface $entityManager, Request $request, int $id): Response
     {
         // Get the user from the database
